Menu produtos finalizado

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
-    <title>Celcoin</title>
+      <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400&display=swap" rel="stylesheet">
+      <title>Celcoin</title>
 </head>
 <body>
     <header>
@@ -66,24 +67,56 @@
 
 
 <section>
-    <nav>
+    <nav id="menu-produtos">
         <ul>
-            <li><a href="">Recargar Celular</a></li>
-            <li><a href="">Pagar Conta</a></li>
-            <li><a href="">Consulta CPF/CNPJ</a></li>
-            <li><a href="">Receber Depósito</a></li>
-            <li><a href="">Google Play</a></li>
-            <li><a href="">Netflix</a></li>
-            <li><a href="">Bilhete Único - SP</a></li>
-            <li><a href="">TV Pré-Pago</a></li>
-            <li><a href="">Consulta Veícular</a></li>            
-            <li><a href="">Passagem de Ônibus</a></li>            
-            <li><a href="">Jogos</a></li>            
-            <li><a href="">Uber</a></li>            
-            <li><a href="">Spotify</a></li>            
-            <li><a href="">Sorteio Loteria/Doação</a></li>            
-            <li><a href="">Recarga Fixo</a></li>            
-            <li><a href="">Chips de Celular</a></li>
+            <li><a href=""><img src="./image/recarga-celular.png"> Celular<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="./image/boleto.png">Pagar Conta<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="./image/consulta-cpf.png">Consulta CPF/CNPJ<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="./image/deposito.png">Receber Depósito<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="./image/google.png">Google Play<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="./image/netflix.png">Netflix<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="">Bilhete Único - SP<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="">TV Pré-Pago<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
+            <li><a href=""><img src="./image//consulta-veicular.png">Consulta Veícular<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="./image/passagem-onibus.png">Passagem de Ônibus<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="./image/jogos.png">Jogos<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="">Uber<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="">Spotify<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="">Sorteio Loteria/Doação<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="">Recarga Fixo<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>            
+            <li><a href=""><img src="./image/chip.png">Chips de Celular<i class="material-icons">
+keyboard_arrow_right
+</i></a></li>
             
              </ul>
     </nav>
