--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <section>
     <nav id="menu-produtos">
         <ul>
-            <li><a href=""><img src="./image/recarga-celular.png"> Celular<i class="material-icons">
+            <li><a href=""><img src="./image/recarga-celular.png">Recarga Celular<i class="material-icons">
 keyboard_arrow_right
 </i></a></li>
             <li><a href=""><img src="./image/boleto.png">Pagar Conta<i class="material-icons">
