--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <title>Celcoin</title>
 </head>
 <body>
@@ -124,12 +125,16 @@ keyboard_arrow_right
     </main>
     <footer>
 <nav>
-    <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Extrato</a></li>
-        <li><a href="">Bonus</a></li>
-        <li><a href="">Retirada</a></li>
-        <li><a href="">Vender</a></li>
+    <ul class="menu-footer">
+        <li><i class="material-icons">home</i><a href="">Home</a></li>
+        <li><i class="material-icons">swap_vert</i><a href="">Extrato</a></li>
+        <li><i class="material-icons">
+            card_giftcard
+            </i><a href="">Bonus</a></li>
+        <li><i class="material-icons">
+            attach_money
+            </i><a href="">Retirada</a></li>
+        <li><i class="fa fa-calculator"></i><a href="">Vender</a></li>
     </ul>
 </nav>
     </footer>
